@@ -1,9 +1,11 @@
 EXTRA_DIST = \
-	lmdb.awk \
-	lmdb.ok \
+	basic.awk \
+	basic.ok \
 	dict.awk \
 	dict.in \
-	dict.ok
+	dict.ok \
+	dict_cursor.awk \
+	dict_cursor.ok
 
 # Get rid of core files when cleaning and generated .ok file
 CLEANFILES = _* *_.png core core.* junk out1 out2 out3 test1 test2 seq *~
@@ -16,7 +18,7 @@ include test.makefile
 check:	test-msg-start mytests test-msg-end
 	@$(MAKE) pass-fail || { $(MAKE) diffout; exit 1; }
 
-mytests: lmdb dict
+mytests: basic dict dict_cursor
 
 test-msg-start:
 	@echo "======== Starting lmdb tests ========"
@@ -24,7 +26,7 @@ test-msg-start:
 test-msg-end:
 	@echo "======== Done with lmdb tests ========"
 
-lmdb::
+basic::
 	@echo $@
 	@$(AWK) -l lmdb -f $(srcdir)/$@.awk >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
 	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
@@ -32,4 +34,9 @@ lmdb::
 dict::
 	@echo $@
 	@$(AWK) -l lmdb -f $(srcdir)/$@.awk < $(srcdir)/$@.in >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
+	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
+
+dict_cursor::
+	@echo $@
+	@$(AWK) -l lmdb -f $(srcdir)/$@.awk < $(srcdir)/dict.in >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
 	@-$(CMP) $(srcdir)/$@.ok _$@ && rm -f _$@
