@@ -2,8 +2,8 @@ BEGIN {
 	printf "MDB_SUCCESS = %s\n", MDB_SUCCESS
 	printf "MDB_KEY = %s\n", MDB_KEY
 	printf "MDB_DATA = %s\n", MDB_DATA
-	print (MDB_ERRNO == MDB_SUCCESS)
-	print (length(MDB) > 0)
+	printf "MDB_ERRNO = %s\n", MDB_ERRNO
+	print (length(MDB) >= 68)
 	print MDB["SUCCESS"]
 	print (MDB["NOSUBDIR"] > 0)
 
